[gd_scene load_steps=14 format=1]

[ext_resource path="res://scripts/world.gd" type="Script" id=1]
[ext_resource path="res://sprites/separator.png" type="Texture" id=2]
[ext_resource path="res://scenes/left.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/right.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/ball.tscn" type="PackedScene" id=5]
[ext_resource path="res://font/Xolonium-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://scenes/PowerUp.tscn" type="PackedScene" id=7]

[sub_resource type="ConvexPolygonShape2D" id=1]

custom_solver_bias = 0.0
points = Vector2Array( -48, 0, -80, -32, 720, -32, 688, 0 )

[sub_resource type="ConvexPolygonShape2D" id=2]

custom_solver_bias = 0.0
points = Vector2Array( 688, 0, 720, -32, 720, 432, 688, 400 )

[sub_resource type="ConvexPolygonShape2D" id=3]

custom_solver_bias = 0.0
points = Vector2Array( 688, 400, 720, 432, -80, 432, -48, 400 )

[sub_resource type="ConvexPolygonShape2D" id=4]

custom_solver_bias = 0.0
points = Vector2Array( -48, 400, -80, 432, -80, -32, -48, 0 )

[sub_resource type="DynamicFont" id=5]

font/size = 16
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 6 )

[sub_resource type="DynamicFont" id=6]

font/size = 16
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 6 )

[node name="world" type="Node2D"]

script/script = ExtResource( 1 )

[node name="seperator" type="Sprite" parent="."]

texture = ExtResource( 2 )

[node name="left" parent="." instance=ExtResource( 3 )]

[node name="right" parent="." instance=ExtResource( 4 )]

[node name="ball" parent="." instance=ExtResource( 5 )]

[node name="walls" type="StaticBody2D" parent="."]

editor/display_folded = true
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 2 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/1/trigger = false
shapes/2/shape = SubResource( 3 )
shapes/2/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/2/trigger = false
shapes/3/shape = SubResource( 4 )
shapes/3/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/3/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="collison" type="CollisionPolygon2D" parent="walls"]

build_mode = 0
polygon = Vector2Array( 688, 0, -48, 0, -80, -32, 720, -32, 720, 432, -80, 432, -80, -32, -48, 0, -48, 400, 688, 400 )
shape_range = Vector2( 0, 3 )
trigger = false

[node name="p1_score" type="Label" parent="."]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 5.0
margin/top = 5.0
margin/right = 45.0
margin/bottom = 25.0
custom_fonts/font = SubResource( 5 )
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="p2_score" type="Label" parent="."]

anchor/left = 1
anchor/top = 1
anchor/right = 1
anchor/bottom = 1
rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -491.0
margin/top = 59.0
margin/right = -531.0
margin/bottom = 39.0
custom_fonts/font = SubResource( 6 )
text = "0"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="PowerUp" parent="." instance=ExtResource( 7 )]

transform/pos = Vector2( 288.933, 201.498 )


